--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             <div class="row" id="characters">
 
             </div>
+            <div class="row">
+                <div class="col-12">
+                    <h1>Species</h1>
+                    <button type="button" class="btn btn-warning"
+                        onclick="app.speciesController.previous()">Previous</button>
+                    <button type="button" class="btn btn-primary"
+                        onclick="app.speciesController.next()">Next</button>
+                </div>
+            </div>
+            <div class="row" id="species">
+
+            </div>
         </div>
     </main>
     <footer class="container-fluid bg-dark text-light">
