--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="row">
                 <div class="col-12">
                     <h1>Characters</h1>
-                    <button type="button" class="btn btn-warning"
+                    <button type="button" class="btn btn-warning m-1"
                         onclick="app.charactersController.previous()">Previous</button>
-                    <button type="button" class="btn btn-primary"
+                    <button type="button" class="btn btn-primary m-1"
                         onclick="app.charactersController.next()">Next</button>
                 </div>
             </div>
@@ -36,9 +36,9 @@
             <div class="row">
                 <div class="col-12">
                     <h1>Species</h1>
-                    <button type="button" class="btn btn-warning"
+                    <button type="button" class="btn btn-warning m-1"
                         onclick="app.speciesController.previous()">Previous</button>
-                    <button type="button" class="btn btn-primary"
+                    <button type="button" class="btn btn-primary m-1"
                         onclick="app.speciesController.next()">Next</button>
                 </div>
             </div>
